# xiao_esp32c_led_net

./: Cargo.toml  test_sender.py
.cargo/: config.toml
docs/: implementation_plan.md  task.md  walkthrough.md
src/: main.rs
