[package]
name = "xiao_esp32c_led_net"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
esp-idf-svc = { version = "0.49", features = ["critical-section", "std", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.44"
ws2812-esp32-rmt-driver = "0.9"
smart-leds = "0.4"
log = "0.4"
esp-idf-sys = { version = "0.35", features = ["binstart"] }
anyhow = "1.0"
dotenvy = "0.15"

[build-dependencies]
embuild = "0.32"
